--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link href="styles.css" rel="stylesheet">
     <title>Soundwave</title>
 </head>
-<body>
-    <header>
+<body class="container">
+    <header class="main-header">
         <a href="/" class="brand-logo">
             <img src="images/logo.png">
             <div class="brand-logo-name">Soundwave</div>
         </a>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="join.html">Join</a></li>
