--- a/discover.html
+++ b/discover.html
@@ -6,33 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
     <link href="discover.css" rel="stylesheet">
-    <title>Discover</title>
+    <title>Soundwave-Discover</title>
 </head>
-<body class="container full-height-grow">
-    <header class="main-header">
-        <a href="/" class="brand-logo">
-            <img src="images/logo.png">
-            <div class="brand-logo-name">Soundwave</div>
-        </a>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="discover.html">Discover</a></li>
-                <li><a href="join.html">Join</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="home-main-section">
-        <div class="img-wrapper">
-            <div class="lady-image"></div>
+<body class="full-height-grow">
+    <div class="container">
+        <header class="main-header">
+            <a href="/" class="brand-logo">
+                <img src="images/logo.png">
+                <div class="brand-logo-name">Soundwave</div>
+            </a>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="join.html">Join</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="discover-main-section">
+            <div class="call-to-action">
+                <h1 class="title">Discover New Music</h1>
+                <div class="icon-section">
+                   <div class="icon">
+                       <img src="images/microphone.svg">
+                       Charts
+                   </div>
+                   <div class="icon">
+                    <img src="images/albums.svg">
+                    Albums
+                </div>
+                <div class="icon">
+                    <img src="images/more.svg">
+                    More
+                </div>
+                </div>
+            </div>
+            <div></div>
+        </section>
+    </div>
+    <footer class="main-footer">
+        <div class="container">
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <nav class="footer-nav">
+                <ul>
+                    <li>
+                        <a href="#" class="social-link">
+                            <img src="images/twitter.svg">
+                            Twitter
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="social-link">
+                            <img src="images/facebook.svg">
+                            Facebook
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <div class="call-to-action">
-            <h1 class="title">Feel The Music</h1>
-            <span class="subtitle">Stream over 20 thousand songs with one click</span>
-            <a href="join.html" class="btn">Join Now</a>
-        </div>
-    </section>
-    <div class="home-page-circle-1"></div>
-    <div class="home-page-circle-2"></div>
-    <div class="home-page-circle-3"></div>
+    </footer>
+    
 </body>
 </html>
