added the styles page for the discover page and added images to html

--- a/discover.html
+++ b/discover.html
@@ -26,21 +26,22 @@
             <div class="call-to-action">
                 <h1 class="title">Discover New Music</h1>
                 <div class="icon-section">
-                   <div class="icon">
-                       <img src="images/microphone.svg">
-                       Charts
-                   </div>
-                   <div class="icon">
-                    <img src="images/albums.svg">
-                    Albums
-                </div>
-                <div class="icon">
-                    <img src="images/more.svg">
-                    More
-                </div>
+                    <div class="icon">
+                        <img src="images/microphone.svg">
+                        Charts
+                    </div>
+                    <div class="icon">
+                        <img src="images/albums.svg">
+                        Albums
+                    </div>
+                    <div class="icon">
+                        <img src="images/more.svg">
+                        More
+                    </div>
+                    By joining you can benefit by listening to the latest albums released. 
                 </div>
             </div>
-            <div></div>
+            <img class="covers-image" src="images/covers.jpg">
         </section>
     </div>
     <footer class="main-footer">
